Fixed last failing test and reorganised ObjectConverter