@@ -19,6 +19,7 @@
         <godaddylogging.version>1.2.5</godaddylogging.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <jvm.options>--add-opens java.base/java.util=ALL-UNNAMED</jvm.options>
     </properties>
 
     <scm>
@@ -263,6 +264,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -375,6 +377,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.18.1</version>
+                <configuration>
+                    <argLine>${jvm.options}</argLine>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
